--- a/DocumentProcessor.Niasua/DocumentProcessor.Niasua/DocumentProcessor.Niasua.csproj
+++ b/DocumentProcessor.Niasua/DocumentProcessor.Niasua/DocumentProcessor.Niasua.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ClosedXML" Version="0.105.0" />
+    <PackageReference Include="CsvHelper" Version="33.1.0" />
+  </ItemGroup>
+
 </Project>
