--- a/DocumentProcessor.Niasua/DocumentProcessor.Niasua/DocumentProcessor.Niasua.csproj
+++ b/DocumentProcessor.Niasua/DocumentProcessor.Niasua/DocumentProcessor.Niasua.csproj
@@ -12,4 +12,10 @@
     <PackageReference Include="CsvHelper" Version="33.1.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="contacts.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
