--- a/DocumentProcessor.Niasua/DocumentProcessor.Niasua/DocumentProcessor.Niasua.csproj
+++ b/DocumentProcessor.Niasua/DocumentProcessor.Niasua/DocumentProcessor.Niasua.csproj
@@ -24,6 +24,7 @@
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="10.0.1" />
     <PackageReference Include="Microsoft.Extensions.Configuration.UserSecrets" Version="10.0.1" />
+    <PackageReference Include="QuestPDF" Version="2025.12.1" />
   </ItemGroup>
 
   <ItemGroup>
